--- a/App_chat_simple/css/style.css
+++ b/App_chat_simple/css/style.css
@@ -1,4 +1,5 @@
 /* Reset CSS */
+
 * {padding: 0; margin: 0;}
 body {font-family: sans-serif; font-size: 15px; color: #555;}
 h1, h2, h3, h4, h5, h6 {font-weight: 100;}
@@ -10,10 +11,104 @@ ul li {list-style: none;}
 .success {background-color: #5cb85c;}
 
 /* Navbar */
-.main-navbar {
-    padding: 15px; text-align: center;
+.main-header {
+    padding: 15px;
+    text-align: center;
     border-bottom: 1px solid #e5e5e5;
 }
-.main-navbar h1 {
+.main-header h1 {
     color: #428bca;
 }
+.main-footer {
+    background-color: #e5e5e5;
+    color: black;
+    padding: 15px;
+    text-align: center;
+    border: 1px solid blue;
+}
+/* Form Login & Register */
+.box-join {
+    text-align: center;
+    margin: 150px auto;
+    padding: 30px 10px;
+}
+.box-join p {
+    margin-bottom: 20px;
+}
+#formJoin .data-input {
+    display: block;
+    margin: 5px auto;
+    padding: 8px 7px;
+    border: 1px solid #ccc;
+    font-size: 15px;
+    width: 300px;
+    color: #555;
+    max-width: calc(100% - 16px);
+}
+#formJoin .btn-submit {
+    margin-top: 10px;
+    padding: 8px 15px;
+    background-color: #428bca;
+    color: #fff;
+    border: 1px solid #428bca;
+    font-size: 15px;
+}
+#formJoin .btn-submit:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
+#formJoin .alert {
+    color: #fff;
+    width: 300px;
+    padding: 8px 7px;
+    margin: 5px auto;
+    text-align: left;
+    display: none;
+}
+
+/* Form chat */
+.messenger {
+    width: 700px;
+    height: 1000px;
+    padding: 30px;
+    border: 1px solid gray;
+    margin: 50px auto;
+}
+.box-chat {
+
+    width: 100%;
+    height: 100px;
+    margin: auto;
+}
+#formSendMsg {
+    height: 100%;
+    width: 100%;
+    margin-top: 50px;
+}
+#formSendMsg input {
+    height: 60%;
+    width: 80%;
+
+}
+#formSendMsg button {
+    height: 60%;
+    width: 15%;
+    margin-left: 25px;
+}
+#formSendMsg button:hover {
+    background-color: green;
+    color: white;
+}
+
+/* Show chat */
+.main-chat {
+    height: 750px;
+    padding: 67px 10px 38px 10px;
+    border: 1px solid yellow;
+}
+.main-chat .msg-user {width: 100%; text-align: right; margin-bottom: 10px;}
+.main-chat .msg-user p {background-color: #428bca; color: #fff; display: inline-block; padding: 10px; font-size: 15px;}
+.main-chat .msg {width: 100%; text-align: left; margin-bottom: 10px;}
+.main-chat .msg p {background-color: #f1f1f1; color: #555; display: inline-block; padding: 10px; font-size: 15px;}
+.main-chat .msg-user .info-msg-user,
+.main-chat .msg .info-msg {font-size: 13px; color: #666; margin-top: 5px;}
